# robot

./: .clangd  .editorconfig  .gitignore  .gitmodules  .mxproject  CMakeLists.txt  README.md  robot.ioc
.github/: pull_request_template.md
Buildfiles/CM4/: Makefile
Buildfiles/CM7/: stm32h755xx_flash_CM7.ld
CM4/Core/Src/: main.c
CM7/: .cproject  .project
CM7/Core/Inc/: HandmadeMath.h  arm_mat_util_f32.h  battery.h  com.h  debug_ui.h  imu.h  kalman.h  kicker.h  lag_element.h  log.h  main.h  motor.h  nav.h  pos_follow.h  state_estimator.h  state_estimator2.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  timer.h  ui.h
CM7/Core/Src/: arm_mat_util_f32.c  battery.c  com.c  debug_ui.c  imu.c  kalman.c  kicker.c  lag_element.c  log.c  main.c  motor.c  nav.c  pos_follow.c  state_estimator.c  state_estimator2.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  timer.c  ui.c
CM7/Debug/: makefile  objects.list  sources.mk
CM7/Debug/Application/User/Core/: subdir.mk
CM7/Debug/Application/User/Startup/: subdir.mk
CM7/Debug/Core/Src/: subdir.mk
CM7/Debug/Drivers/CMSIS/: subdir.mk
CM7/Debug/Drivers/STM32H7xx_HAL_Driver/: subdir.mk
Makefile/: Makefile
Makefile/CM4/: Makefile  stm32h755xx_flash_CM4.ld  stm32h755xx_sram2_CM4.ld
Makefile/CM7/: Makefile
test/: test_movement.c  test_state_estimator.c
tools/: collection_time.npy  data-plotter.py  imu-back-forth-time.npy  imu-back-forth.npy  imu-move-desk-time.npy  imu-move-desk.npy  imu.npy  test-time.npy
